fix(mgMenu): overflow behavior move event dispatch in child interactive element
CORE-2236 #240 CORE-2243 #172 CORE-2242 #242

--- a/src/styles/mixins/navigation-button.scss
+++ b/src/styles/mixins/navigation-button.scss
@@ -39,6 +39,7 @@ $navigation-button-column-gap: 1rem;
     line-height: var(--line-height);
     text-decoration: none;
     white-space: nowrap;
+    box-sizing: border-box;
     cursor: pointer;
     &:disabled,
     &--disabled {
